--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -1,1 +1,12 @@
-<p>contacto works!</p>
+<section class="container contacto">
+  <h1 class="font-cinzel">Contacto</h1>
+  <p class="lead">¿Quieres más información o reservar plaza? Escríbenos o llámanos.</p>
+
+  <div class="contacto__card">
+    <p><strong>Teléfono:</strong> <a href="tel:645774871">645&nbsp;774&nbsp;871</a></p>
+    <!-- Escapamos el @ en el texto visible: &#64; -->
+    <p><strong>Email:</strong>
+      <a href="mailto:gabinetekairos@gmail.com">gabinetekairos&#64;gmail.com</a>
+    </p>
+  </div>
+</section>
